--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,10 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="default_text_size">20sp</dimen>
+    <dimen name="detail_screen_text_size">16sp</dimen>
+
     <dimen name="medium_spacing">16dp</dimen>
+    <dimen name="spacing_24">24dp</dimen>
+    <dimen name="big_spacing">32dp</dimen>
+    <dimen name="spacing_8dp">8dp</dimen>
 </resources>
