--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="medium_spacing">16dp</dimen>
     <dimen name="spacing_24">24dp</dimen>
     <dimen name="big_spacing">32dp</dimen>
+    <dimen name="spacing_48">48dp</dimen>
     <dimen name="spacing_8dp">8dp</dimen>
 </resources>
