--- a/app/src/main/res/xml/motion_scene_detail_screen.xml
+++ b/app/src/main/res/xml/motion_scene_detail_screen.xml
@@ -4,53 +4,41 @@
     
     <Transition
         app:constraintSetStart="@+id/start"
-        app:constraintSetEnd="@+id/end">
-        <OnSwipe
-            app:dragDirection="dragUp"
-            app:touchAnchorId="@+id/ok_btn" />
+        app:constraintSetEnd="@+id/end"
+        app:duration="1000">
+        <OnClick
+            app:targetId="@id/status_content"
+            app:clickAction="toggle"/>
     </Transition>
     
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@+id/ok_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_24"
-            android:layout_marginEnd="@dimen/spacing_24"
-            android:layout_marginBottom="@dimen/spacing_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-       
-        <Constraint
             android:id="@+id/status_content"
-            android:alpha="1.0"
+            android:textColor="@color/backgroundColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/file_name_content"
-            app:layout_constraintTop_toTopOf="@id/status_title" />
+            app:layout_constraintTop_toTopOf="@id/status_title" >
+        <CustomAttribute
+            app:attributeName="textColor"
+            app:customColorValue="@color/backgroundColor" />
+        </Constraint>
+     
     </ConstraintSet>
     
     
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/ok_btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_24"
-            android:layout_marginEnd="@dimen/spacing_24"
-            android:layout_marginBottom="@dimen/spacing_24"
-            app:layout_constraintTop_toBottomOf="@id/status_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    
-        <Constraint
             android:id="@+id/status_content"
-            android:alpha="0.0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/file_name_content"
-            app:layout_constraintTop_toTopOf="@id/status_title" />
+            app:layout_constraintTop_toTopOf="@id/status_title" >
+        <CustomAttribute
+            app:attributeName="textColor"
+            app:customColorValue="@color/green" />
+        </Constraint>
+
     </ConstraintSet>
 
 </MotionScene>
