--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="green">#2A7333</color>
+    <color name="gray">#6C6C6C</color>
     <color name="backgroundColor">#011758</color>
 </resources>
